2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add more documentation.
	* include/roboptim/core/derivable-function.hh: Document
	gradient/jacobian management when output size is larger
	than one.
	* include/roboptim/core/function.hh: Document the class.

2009-06-05  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix main documentation page.
	* src/doc.hh: Fix unrecognized html commands.

2009-06-05  Thomas Moulard  <thomas.moulard@gmail.com>

	Document derivable-function.
	* include/roboptim/core/derivable-function.hh: Here.

2009-06-05  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement a generic freeze constraint.
	* include/Makefile.am: Distribute new header.
	* include/roboptim/core/freeze.hh: New.
	* src/Makefile.am: Compile new file.
	* src/freeze.cc: New.
	* tests/Makefile.am: Compile new test.
	* tests/freeze.cc: New.
	* tests/freeze.stdout: New.
	* tests/testsuite.at: Run new test.

2009-06-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Make problem display more verbose.
	* include/roboptim/core/problem.hxx: Display starting value
	if a starting point has been set.
	* tests/simple.stdout: Regenerate.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove force flag from autoreconf.
	* build-aux/bootstrap: Here.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool support more robust.
	* Makefile.am: Regenerate Libtool related files if
	required.
	* configure.ac: Remove obsolete macro.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add libtool related files.
	* .gitignore: Remove committed file from ignore list.
	* build-aux/config.guess: New.
	* build-aux/config.sub: New.
	* build-aux/depcomp: New.
	* build-aux/install-sh: New.
	* build-aux/libtool.m4: New.
	* build-aux/ltmain.sh: New.
	* build-aux/ltoptions.m4: New.
	* build-aux/ltsugar.m4: New.
	* build-aux/ltversion.m4: New.
	* build-aux/lt~obsolete.m4: New.
	* build-aux/missing: New.
	* configure.ac: Check that dlopen is available.
